--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,23 @@
 body   
 {
-        color: blue;
+        color: rgba(0, 224, 138, 0.884);
         text-align: center;
         font-family: Arial;
+        margin: 0;
+        padding: 0;
+        
+}
+
+#container 
+
+{
+        width: 70%;
+        padding: 1em;
+        text-align: left;
+        border: 1px solid #ffffff;
+        margin: 0 auto;
+}
+#container h1
+{
+        font-size: 20px;
 }
