--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,14 +1,26 @@
 body   
 {
-        color: rgba(0, 224, 138, 0.884);
+        color: rgba(6, 8, 146, 0.884);
         text-align: center;
-        font-family: Arial;
-        margin: 0;
-        padding: 0;
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 16px;
+        margin:0;
+        padding:0;
         
 }
 
-#container 
+#cabecera
+
+{
+        background: #33a;
+        box-shadow: 0px 2px 50px rgba(0, 0, 0, 0, 5);
+        color: white;
+        font-weight: bold;
+        margin: 0;
+        padding: 0.5em;
+}
+
+#container
 
 {
         width: 70%;
@@ -16,8 +28,4 @@ body
         text-align: left;
         border: 1px solid #ffffff;
         margin: 0 auto;
-}
-#container h1
-{
-        font-size: 20px;
 }
