--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,26 +1,46 @@
 body   
 {
-        color: rgba(6, 8, 146, 0.884);
+        color: #333;
         text-align: center;
-        font-family: "Arial";
+        font-family:'Courier New', Courier, monospace;
         font-size: 16px;
         margin: 0;
         padding: 0;
-        
 }
 
 #cabecera
-
 {
-        background: #33a;
-        box-shadow: 0px 2px 50px rgba(0, 0, 0, 0, 5);
+        background: #33A;
+        box-shadow: 13px 26px 53px 7px rgba(0,0,0,0.56);
+        color: white;
+        font-weight: bold;
+        margin: 0;
+        padding: 0.5em;
+}
+
+#cabecera #tagline
+{
+        margin: 0 0 0 1em;
+        font-weight: normal;
+        font-size: 0.8em;
+}
+
+#container
+{
         width: 70%;
-        padding: 1em;
+        padding: 0;
         text-align: left;
-        border: 1px solid #ffffff;
+        border: 1px solid #000000;
         margin: 0 auto;
 }
+
 #container h1
 {
         font-size: 20px;
+
+}
+
+#post
+{
+        padding: 1em;
 }
